Fix auction activity spacing

--- a/packages/nouns-webapp/src/components/CurrentAuction/AuctionActivity.module.css
+++ b/packages/nouns-webapp/src/components/CurrentAuction/AuctionActivity.module.css
@@ -1,5 +1,5 @@
 .activityContainer {
-  margin-top: 5.2rem;
+  margin-top: 6.5rem;
   padding: 1rem 2rem;
   color: #504f49;
 }
